# python-pizza

./: .gitignore  README.md  pyproject.toml  shell.nix
databehandling/: databehandling.ipynb
scikit-learn/: get_solardata.py
solargeneration/: main.ipynb
