[tool.poetry]
name = "python-pizza"
version = "0.1.0"
description = "Utviklermiljø for Python og Pizza"
authors = ["harvidsen <hakon.arvidsen@bkk.no>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"
requests = "^2.26.0"
scikit-learn = "^1.0.1"
azure-storage-blob = "^12.9.0"
jupyter = "^1.0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
